--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
+    "react-coin-icon": "^0.1.42",
     "react-native": "0.64.1",
-    "react-native-cryptocurrency-hexagon-icons": "^1.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
